--- a/index.html
+++ b/index.html
@@ -4,11 +4,87 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Git</title>
+
+    <!-- Import bootsrap by online (CDN) -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Hello, Git!</h1>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-sm fixed-top" style="font-weight: 600">
+      <div class="container-md">
+        <a href="#main" class="navbar-brand">
+          <button class="logo"></button>
+        </a>
+        <button
+          class="navbar-toggler d-lg-none"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="offcanvas-sm offcanvas-end"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="offcanvas-header mb-0">
+            <h3 class="my-auto">BCR</h3>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul
+              class="navbar-nav justify-content-md-end flex-lg-grow-1 align-items-sm-center"
+            >
+              <li class="nav-item">
+                <a href="#our-services" class="nav-link text-dark"
+                  >Our Services</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="#why-us" class="nav-link text-dark">Why Us</a>
+              </li>
+              <li class="nav-item">
+                <a href="#testimonial" class="nav-link text-dark"
+                  >Testimonial</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="#faq" class="nav-link text-dark">FAQ</a>
+              </li>
+              <li class="nav-item">
+                <a href="pages/auth/register.html" class="nav-link"
+                  ><button class="button-navbar">Register</button></a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <h1 class="pt-5">Hello, Git!</h1>
     <p>Version satu</p>
 
     <h2>Version dua</h2>
+
+    <!-- Import bootsrap by online (CDN) for bootstrap.js (carousell, slider, navbar mobile...) -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
