--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <p>Version satu</p>
 
     <h2>Version dua</h2>
+    <h2>Version Stagging</h2>
 
     <!-- Import bootsrap by online (CDN) for bootstrap.js (carousell, slider, navbar mobile...) -->
     <script
