--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
       </div>
     </nav>
-    <h1 class="pt-5">Hello, Git!</h1>
+    <h1 class="pt-5">Hello, Git Staging!</h1>
     <p>Version satu</p>
 
     <h2>Version dua</h2>
