--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <h1 class="pt-5">Hello, Git Staging!</h1>
     <p>Version satu</p>
 
-    <h2>Version dua</h2>
+    <h2>Version tiga</h2>
     <h2>Version Stagging</h2>
 
     <!-- Import bootsrap by online (CDN) for bootstrap.js (carousell, slider, navbar mobile...) -->
